# kak-ts

./: pyproject.toml
rc/: kak-tree-sitter.kak
src/: config.py  kakoune.py  main.py  server.py  xdg_utils.py
