[tool.poetry]
name = "kakoune-treesitter"
version = "0.1.0"
description = "Tree Sitter integration for Kakoune."
authors = ["James Dugan <jdugan6240@vivaldi.net>"]
license = "0BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tree-sitter = "^0.20.2"

[tool.poetry.group.dev.dependencies]
# python-lsp-server
python-lsp-server = "*"
pylsp-mypy = "*"
python-lsp-black = "*"
pyls-isort = "*"
pylsp-rope = "*"
python-lsp-ruff = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
